# n4s-api

./: CMakeLists.txt  LICENSE
lib/includes/: command.h  config.h  types.h  utils.h
lib/includes/class/: car.h  command.h  converter.h  listener.h  remote.h
lib/srcs/class/car/: __construct.c  __destruct.c  listen.c
lib/srcs/class/command/: __construct.c  __destruct.c  apply.c  import.c  load.c  send.c  set_value.c
lib/srcs/class/converter/: __construct.c  __destruct.c  calculations.c  close.c  export.c  import.c  open.c
lib/srcs/class/listener/: __construct.c  __destruct.c  connect.c  disconnect.c  listen.c
lib/srcs/class/remote/: __construct.c  __destruct.c  connect.c
lib/srcs/command/: __construct.c  __destruct.c  config.c  execute.c  listen.c  load.c  prepare.c  send.c  value.c
lib/srcs/utils/: close_io.c
